erDiagram
    DEPARTMENT ||--o{ STUDENT : "소속(1:N)"
    DEPARTMENT ||--o{ PROFESSOR : "소속(1:N)"
    DEPARTMENT ||--o{ COURSE : "개설(1:N)"
    PROFESSOR ||--o{ COURSE : "담당(1:N)"
    STUDENT ||--o{ ENROLLMENT : "신청(1:N)"
    COURSE ||--o{ ENROLLMENT : "신청됨(1:N)"

    DEPARTMENT {
        int dept_id PK
        varchar dept_name
        varchar dept_code UK
        varchar office_location
    }

    PROFESSOR {
        int prof_id PK
        varchar prof_name
        int dept_id FK
        varchar email UK
        date hire_date
    }

    STUDENT {
        int student_id PK
        varchar student_name
        int dept_id FK
        date birth_date
        varchar gender
        varchar phone
        varchar email UK
        date admission_date
        varchar status
    }

    COURSE {
        int course_id PK
        varchar course_name
        int credit
        int dept_id FK
        int prof_id FK
        varchar semester_offered
    }

    ENROLLMENT {
        int enrollment_id PK
        int student_id FK
        int course_id FK
        varchar semester
        date enroll_date
        varchar grade
    }

    LEGEND {
        string PK_meaning "PK = Primary Key(기본키)"
        string FK_meaning "FK = Foreign Key(외래키)"
        string UK_meaning "UK = Unique Key(고유값 제약)"
        string one_to_many "one(--||) to many(o{--) : 1대다 관계"
        string cross_table "STUDENT-COURSE 는 N:M 관계이며 ENROLLMENT 교차테이블로 구현"
    }
